# arnio

./: CHANGELOG.md  README.md  pyproject.toml
arnio/: __init__.py  _core.py  frame.py  io.py  pipeline.py  quality.py  schema.py
bindings/: bind_arnio.cpp
cpp/: CMakeLists.txt
cpp/include/arnio/: csv_writer.h
cpp/src/: cleaning.cpp  csv_reader.cpp  csv_writer.cpp
tests/: test_benchmarks_smoke.py  test_cleaning.py  test_csv.py  test_frame.py  test_getitem.py  test_pipeline.py  test_quality.py  test_schema.py  test_write_csv.py
